Update core editor to use vim

--- a/.gitconfig
+++ b/.gitconfig
@@ -6,7 +6,7 @@
 [sequence]
 	editor = rebase-editor
 [core]
-	editor = nano
+	editor = vim
 [filter "lfs"]
 	clean = git-lfs clean -- %f
 	smudge = git-lfs smudge -- %f
